--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "test": "truffle test",
     "lint": "eslint ./",
     "prepare": "truffle compile && npm test && npm run lint && webpack-cli --config ./webpack.config.js",
+    "make": "truffle.cmd compile && truffle.cmd migrate",
     "build": "npm install",
+    "ganache": "ganache-cli -b 5",
     "dev": "webpack-dev-server"
   },
   "author": "Douglas von Kohorn",
@@ -30,6 +32,7 @@
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "ganache-cli": "^6.1.8",
     "json-loader": "^0.5.7",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
