--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "eslint-plugin-mocha": "^4.8.0",
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
     "ganache-cli": "^6.1.8",
+    "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
     "node-sass": "^4.9.0",
+    "popper.js": "^1.14.4",
     "sass-loader": "^7.0.3",
     "source-map-support": "^0.5.3",
     "style-loader": "^0.21.0",
@@ -44,5 +45,9 @@
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1"
   }
 }
