--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-standard": "^2.0.0",
     "ganache-cli": "^6.1.8",
     "html-webpack-plugin": "^3.2.0",
+    "ipfs-api": "^24.0.1",
     "json-loader": "^0.5.7",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.4",
