--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.2",
   "description": "Frontend example using truffle v3",
   "scripts": {
-    "test": "truffle test",
+    "test": "truffle.cmd test",
     "lint": "eslint ./",
-    "prepare": "truffle compile && npm test && npm run lint && webpack-cli --config ./webpack.config.js",
+    "prepare": "truffle.cmd compile && npm test && npm run lint && webpack-cli --config ./webpack.config.js",
     "make": "truffle.cmd compile && truffle.cmd migrate",
     "build": "npm install",
     "ganache": "ganache-cli -b 5",
